

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="contactbook.AddUserActivity">

    <TextView
        android:text="@string/adduser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />


    <EditText
        android:id="@+id/edit_message"
        android:layout_width= "wrap_content"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message"

        />

    <EditText
        android:id="@+id/edit_message0"
        android:layout_width= "wrap_content"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message0"

        />
    <EditText
        android:id="@+id/edit_message1"
        android:layout_width= "wrap_content"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message1"

        />
    <EditText
        android:id="@+id/edit_message2"
        android:layout_width= "wrap_content"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message2"

        />

    <Button
        android:id="@+id/adduser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send0"
        android:onClick="showMessage"
        
        />



</LinearLayout>


